<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_100"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logokecil" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="182dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/sign_up"
        android:textColor="@color/primary_100"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/or" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/account" />

    <EditText
        android:id="@+id/input_fullname"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/full_name"
        android:inputType="text"
        android:maxLength="16"
        android:paddingHorizontal="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/input_emailaddress"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/email_address"
        android:inputType="text"
        android:maxLength="16"
        android:paddingHorizontal="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_fullname" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/password"
        android:inputType="text"
        android:maxLength="16"
        android:paddingHorizontal="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_emailaddress" />

    <EditText
        android:id="@+id/input_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:maxLength="16"
        android:paddingHorizontal="16dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />


    <RadioButton
        android:id="@+id/rb_female"
        android:layout_width="268dp"
        android:layout_height="38dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="160dp"
        android:hint="By creating an account I agree to the terms of use and our privacy policy."
        android:textColor="@color/primary_100"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/shape_rectangle_green"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/create_my_account"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppinsregular"
        android:hint="Already have an account?"
        android:textColor="@color/primary_100"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/poppinsregular"
        android:text="Sign In"
        android:textColor="@color/primary_100"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>